[project]
name = "analyze-sport-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Filip",email = "filip.strajnar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "garmin-fit-sdk (>=21.158.0,<22.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
